--- a/TvEngine3/Mediaportal/TV/Server/TVLibrary/TVLibrary.csproj
+++ b/TvEngine3/Mediaportal/TV/Server/TVLibrary/TVLibrary.csproj
@@ -99,9 +99,12 @@
       <Link>SolutionInfo.cs</Link>
     </Compile>
     <Compile Include="Implementations\Analog\ChannelScannerHelperAnalog.cs" />
+    <Compile Include="Implementations\Analog\SubChannelManagerAnalog.cs" />
     <Compile Include="Implementations\Atsc\ChannelScannerHelperAtsc.cs" />
     <Compile Include="Implementations\Atsc\EpgGrabberAtsc.cs" />
     <Compile Include="Implementations\DirectShow\Bda\TunerDetectorBda.cs" />
+    <Compile Include="Implementations\Dri\SubChannelManagerDri.cs" />
+    <Compile Include="Implementations\Dvb\ChannelScannerDvb.cs" />
     <Compile Include="Implementations\Dvb\EpgGrabberDvb.cs" />
     <Compile Include="Implementations\DirectShow\Stream\TunerDetectorStream.cs" />
     <Compile Include="Implementations\DirectShow\TsWriterWrapper.cs" />
@@ -142,8 +145,9 @@
     <Compile Include="Implementations\Dri\TunerDri.cs" />
     <Compile Include="Implementations\DirectShow\Pbda\TunerPbdaCableCard.cs" />
     <Compile Include="Implementations\Dvb\ChannelScannerHelperDvb.cs" />
+    <Compile Include="Implementations\Dvb\SubChannelManagerDvb.cs" />
     <Compile Include="Implementations\Enum\TunerState.cs" />
-    <Compile Include="Implementations\Mpeg2Ts\NewSubChannelMpeg2Ts.cs" />
+    <Compile Include="Implementations\Mpeg2Ts\SubChannelMpeg2Ts.cs" />
     <Compile Include="Implementations\SatIp\TunerDetectorSatIp.cs" />
     <Compile Include="Implementations\SatIp\TunerSatIpCable.cs" />
     <Compile Include="Implementations\SatIp\TunerSatIpBase.cs" />
@@ -216,9 +220,9 @@
     <Compile Include="Implementations\Scte\Parser\ParserNtt.cs" />
     <Compile Include="Implementations\Scte\Parser\ParserSvct.cs" />
     <Compile Include="Implementations\Scte\TunerScteWrapper.cs" />
+    <Compile Include="Implementations\SubChannelManagerBase.cs" />
     <Compile Include="Implementations\SystemInformation.cs" />
     <Compile Include="Implementations\TunerDetector.cs" />
-    <Compile Include="Implementations\Mpeg2Ts\SubChannelMpeg2Ts.cs" />
     <Compile Include="Implementations\Helper\DevicesInUse.cs" />
     <Compile Include="Implementations\DirectShow\ChannelScannerDirectShowAnalog.cs" />
     <Compile Include="Implementations\DirectShow\Bda\TunerBdaAtsc.cs" />
@@ -245,6 +249,7 @@
     <Compile Include="Implementations\Upnp\Service\ServiceAvTransport.cs" />
     <Compile Include="Implementations\Upnp\Service\ServiceBase.cs" />
     <Compile Include="Implementations\Upnp\Service\ServiceConnectionManager.cs" />
+    <Compile Include="Interfaces\Analyzer\PidType.cs" />
     <Compile Include="Interfaces\Analyzer\PidUsage.cs" />
     <Compile Include="Interfaces\Analyzer\EncryptionState.cs" />
     <Compile Include="Interfaces\Analyzer\IObserver.cs" />
@@ -260,12 +265,11 @@
     <Compile Include="Interfaces\Analyzer\ICallBackGrabber.cs" />
     <Compile Include="Interfaces\Analyzer\IGrabberEpgAtsc.cs" />
     <Compile Include="Interfaces\Analyzer\IGrabberEpgOpenTv.cs" />
+    <Compile Include="Interfaces\ISubChannelManager.cs" />
     <Compile Include="Interfaces\ISubChannelInternal.cs" />
     <Compile Include="Interfaces\ITunerDetectorSystem.cs" />
     <Compile Include="Interfaces\IChannelScannerHelper.cs" />
     <Compile Include="Interfaces\IDVBNetworkProvider.cs" />
-    <Compile Include="Interfaces\Analyzer\ITsEpgScanner.cs" />
-    <Compile Include="Interfaces\Analyzer\ITsFilter.cs" />
     <Compile Include="Interfaces\Analyzer\ITsChannelScan.cs" />
     <Compile Include="Interfaces\IChannelScannerInternal.cs" />
     <Compile Include="Interfaces\ITsMultiplexer.cs" />
