Change the TsWriter interface to enable all logical channel numbers to be retrieved. This enables the TV library to make the decisions about which LCN to use with access to all relevant settings.

--- a/TvEngine3/Mediaportal/TV/Server/TVLibrary/TVLibrary.csproj
+++ b/TvEngine3/Mediaportal/TV/Server/TVLibrary/TVLibrary.csproj
@@ -249,6 +249,7 @@
     <Compile Include="Implementations\Upnp\Service\ServiceAvTransport.cs" />
     <Compile Include="Implementations\Upnp\Service\ServiceBase.cs" />
     <Compile Include="Implementations\Upnp\Service\ServiceConnectionManager.cs" />
+    <Compile Include="Interfaces\Analyzer\LogicalChannelNumber.cs" />
     <Compile Include="Interfaces\Analyzer\PidType.cs" />
     <Compile Include="Interfaces\Analyzer\PidUsage.cs" />
     <Compile Include="Interfaces\Analyzer\EncryptionState.cs" />
