Twinhan tuner extension: modify Elgato EyeTV Sat handling again. It seems that older drivers work fine with the previous TerraTec handling. Newer drivers with PBDA support don't lock on signal if the Twinhan LNB or DiSEqC IOCTLs are used. So, we now use the Microsoft BDA DiSEqC interface for DiSEqC support with Elgato PBDA drivers.

--- a/TvEngine3/Mediaportal/TV/Server/Plugins/TunerExtensions/Twinhan/Twinhan.csproj
+++ b/TvEngine3/Mediaportal/TV/Server/Plugins/TunerExtensions/Twinhan/Twinhan.csproj
@@ -94,6 +94,10 @@
       <Project>{AE752FB4-7450-4150-9BAD-19EFA9D2AC37}</Project>
       <Name>TvLibrary.Interfaces</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MicrosoftBdaDiseqc\MicrosoftBdaDiseqc.csproj">
+      <Project>{1C632954-8D35-41F2-B994-E4D45857BC6D}</Project>
+      <Name>MicrosoftBdaDiseqc</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
