DirectShowLib More non-functional changes to more closely match the original code. Mostly white-space changes and/or including ALLOW_UNTESTED_INTERFACES ifdefs.

--- a/TvEngine3/Mediaportal/TV/Server/DirectShowLib/DirectShowLib.csproj
+++ b/TvEngine3/Mediaportal/TV/Server/DirectShowLib/DirectShowLib.csproj
@@ -66,7 +66,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;ALLOW_UNTESTED_STRUCTS;ALLOW_UNTESTED_INTERFACES</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;ALLOW_UNTESTED_INTERFACES</DefineConstants>
     <BaseAddress>285212672</BaseAddress>
     <DebugType>full</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
