--- a/TvEngine3/Mediaportal/TV/Server/Plugins/TunerExtensions/Knc/packages.config
+++ b/TvEngine3/Mediaportal/TV/Server/Plugins/TunerExtensions/Knc/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="KNC.BDA.Control" version="1.6.114" targetFramework="net40" />
+  <package id="KNC.BDA.API" version="1.6.114" targetFramework="net40" />
 </packages>
