--- a/TvEngine3/Mediaportal/TV/Server/Plugins/TunerExtensions/Realtek/Realtek.csproj
+++ b/TvEngine3/Mediaportal/TV/Server/Plugins/TunerExtensions/Realtek/Realtek.csproj
@@ -78,7 +78,17 @@
       <Name>TvLibrary.Interfaces</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\..\..\..\..\..\..\Packages\Realtek.BDA.API.0.0.1\build\Realtek.BDA.API.targets" Condition="Exists('..\..\..\..\..\..\..\Packages\Realtek.BDA.API.0.0.1\build\Realtek.BDA.API.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\..\..\..\..\..\..\Packages\Realtek.BDA.API.0.0.1\build\Realtek.BDA.API.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\..\..\..\..\Packages\Realtek.BDA.API.0.0.1\build\Realtek.BDA.API.targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
