Rework system tuner detection and tuner detector power handling. We now use our own "SystemChangeNotifier" to detect relevant system device and power changes. Associated tuner instances can be constructed or disposed directly upon reception of device change event(s), avoiding the need for full redetection and complex diff'ing logic. The system change notifier can also be reused for other classes of hardware such as HIDs and blasters.

--- a/TvEngine3/Mediaportal/TV/Server/TvLibrary.Interfaces/TvLibrary.Interfaces.csproj
+++ b/TvEngine3/Mediaportal/TV/Server/TvLibrary.Interfaces/TvLibrary.Interfaces.csproj
@@ -84,6 +84,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
@@ -125,6 +126,7 @@
     <Compile Include="Implementations\Helper\ComHelper.cs" />
     <Compile Include="Implementations\Helper\Dump.cs" />
     <Compile Include="Implementations\Dvb\DvbMmiHandler.cs" />
+    <Compile Include="Implementations\Helper\SystemChangeNotifier.cs" />
     <Compile Include="Implementations\Mpeg2Ts\TableConditionalAccess.cs" />
     <Compile Include="Implementations\Mpeg2Ts\ConditionalAccessDescriptor.cs" />
     <Compile Include="Implementations\Mpeg2Ts\StreamTypeHelper.cs" />
