Twinhan tuner extension: use a single listener thread/window for all instances. Marcus Venturi found out that a given usage page/collection combination can only be registered once per application. Subsequent registrations overwrite prior ones. So, this was a necessary change.
http://forum.team-mediaportal.com/threads/auto3d-plugin-for-mediaportal-1-2-1-12-gui-tv-beamer.116708/page-84#post-1167590
http://stackoverflow.com/a/9756322/3288206

--- a/TvEngine3/Mediaportal/TV/Server/Plugins/TunerExtensions/Twinhan/Twinhan.csproj
+++ b/TvEngine3/Mediaportal/TV/Server/Plugins/TunerExtensions/Twinhan/Twinhan.csproj
@@ -59,6 +59,7 @@
     <Compile Include="..\..\..\..\..\..\..\Common-MP-TVE3\SolutionInfo.cs">
       <Link>SolutionInfo.cs</Link>
     </Compile>
+    <Compile Include="RemoteControl\HidListener.cs" />
     <Compile Include="RemoteControl\RemoteControlLegacy.cs" />
     <Compile Include="RemoteControl\Enum\HidConsumerUsage.cs" />
     <Compile Include="RemoteControl\Enum\MceRemoteUsage.cs" />
