MP1-4155: changed TV plugin to allow to set remote server or proxy credentials

--- a/TvEngine3/TVLibrary/Plugins/MediaPortalIptvFilterAndUrlSourceSplitter/MediaPortalIptvFilterAndUrlSourceSplitter.csproj
+++ b/TvEngine3/TVLibrary/Plugins/MediaPortalIptvFilterAndUrlSourceSplitter/MediaPortalIptvFilterAndUrlSourceSplitter.csproj
@@ -131,6 +131,7 @@
     <Compile Include="ProtocolSettings.cs" />
     <Compile Include="Url\ProgramElement.cs" />
     <Compile Include="Url\ProgramElementCollection.cs" />
+    <Compile Include="Url\ProxyServerType.cs" />
     <Compile Include="Url\RtmpArbitraryData.cs" />
     <Compile Include="Url\RtmpArbitraryDataCollection.cs" />
     <Compile Include="Url\RtmpArbitraryDataCollectionEditor.cs" />
