Add search by IMDBID in kinopoisk_ru.csscript Fix Collection support in Configurator when manual movie saved.

--- a/mediaportal/MediaPortal.Base/scripts/MovieInfo/kinopoisk_ru.csscript.config
+++ b/mediaportal/MediaPortal.Base/scripts/MovieInfo/kinopoisk_ru.csscript.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <search>
         <title>
@@ -13,6 +13,10 @@
             <pattern>{movieTitle}{movieSeparator}{movieAlternate} ({year})</pattern>
             <separator> / </separator>
             <replaceEmptyAlternateWithTitle>false</replaceEmptyAlternateWithTitle>
+            <!-- 
+                Force IMDBID search ...
+            -->
+            <imdbidforce>false</imdbidforce>
             <!-- 
                 Maximum IMDB Movie search retrive, 0 - Disable IMDBID Search
             -->
@@ -74,7 +78,7 @@
         <pictureSource>kinopoisk</pictureSource>
         <tmdbApiKey></tmdbApiKey>
         <!--
-            Groups from TMDB
+            Groups/Collection from TMDB
         -->
         <tmdbGroups>false</tmdbGroups>
         <!--
@@ -85,6 +89,10 @@
             Set Delimiter for description.
         -->
         <descriptionDelimiter> </descriptionDelimiter>
+        <!-- 
+            Get movie awards from Kinopoisk
+        -->
+        <MovieAwards>true</MovieAwards>
         <!-- 
             Try to get full movie Trivia errors
         -->
