DirecTV SHEF tuner extension improvements... 1. Add support for controlling Genie Mini receivers. - add getLocations SHEF request - tune and processKey SHEF requests extended with support for the clientAddr parameter - config UI supports selecting Genie Mini by human-readable "location" description 2. Add support for tuning channels with two-part channel numbers. 3. Move the getVersion request used by the config UI test function to the server side service. This enables config/clients to test without direct access/connection to the STB. 4. Update the DirecTV logo in the config UI (DirecTV has been acquired by AT&T). 5. Remove the documentation from the UI. It's better to keep it "portable" (updateable, translatable etc.) by putting it in a wiki or similar.

--- a/TvEngine3/Mediaportal/TV/Server/Plugins/TunerExtensions/DirecTvShef/DirecTvShef.csproj
+++ b/TvEngine3/Mediaportal/TV/Server/Plugins/TunerExtensions/DirecTvShef/DirecTvShef.csproj
@@ -70,17 +70,26 @@
     <Compile Include="Config\DirecTvShefConfig.Designer.cs">
       <DependentUpon>DirecTvShefConfig.cs</DependentUpon>
     </Compile>
+    <Compile Include="Config\SelectGenieMini.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Config\SelectGenieMini.designer.cs">
+      <DependentUpon>SelectGenieMini.cs</DependentUpon>
+    </Compile>
     <Compile Include="DirecTvShef.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\DirecTvShefConfigService.cs" />
     <Compile Include="Service\IDirecTvShefConfigService.cs" />
     <Compile Include="SetTopBoxConfig.cs" />
+    <Compile Include="Shef\Request\ShefRequestGetLocations.cs" />
     <Compile Include="Shef\Request\ShefRequestGetVersion.cs" />
     <Compile Include="Shef\Request\ShefRemoteKeyPress.cs" />
     <Compile Include="Shef\Request\ShefRemoteKey.cs" />
     <Compile Include="Shef\Request\ShefRequestProcessKey.cs" />
     <Compile Include="Shef\Request\IShefRequest.cs" />
     <Compile Include="Shef\Request\ShefRequestTune.cs" />
+    <Compile Include="Shef\Response\ShefLocation.cs" />
+    <Compile Include="Shef\Response\ShefResponseGetLocations.cs" />
     <Compile Include="Shef\Response\ShefResponseStatusCode.cs" />
     <Compile Include="Shef\Response\ShefResponseProcessKey.cs" />
     <Compile Include="Shef\Response\ShefResponseStatus.cs" />
@@ -126,6 +135,10 @@
   <ItemGroup>
     <EmbeddedResource Include="Config\DirecTvShefConfig.resx">
       <DependentUpon>DirecTvShefConfig.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Config\SelectGenieMini.resx">
+      <DependentUpon>SelectGenieMini.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
