--- a/TvEngine3/Mediaportal/TV/Server/SetupControls/SetupControls.csproj
+++ b/TvEngine3/Mediaportal/TV/Server/SetupControls/SetupControls.csproj
@@ -71,6 +71,12 @@
     <Compile Include="ComboBoxEx .cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="NotifyForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NotifyForm.Designer.cs">
+      <DependentUpon>NotifyForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -82,6 +88,9 @@
     </Compile>
     <Compile Include="SectionSettings.Designer.cs">
       <DependentUpon>SectionSettings.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserInterfaceControls\MPDataGridView.cs">
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="UserInterfaceControls\MPBeveledLine.cs">
       <SubType>UserControl</SubType>
@@ -108,6 +117,9 @@
     <Compile Include="UserInterfaceControls\MPNumericTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="UserInterfaceControls\MPNumericUpDown.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="UserInterfaceControls\MPRadioButton.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -122,6 +134,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="NotifyForm.resx">
+      <DependentUpon>NotifyForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <SubType>Designer</SubType>
       <Generator>ResXFileCodeGenerator</Generator>
