--- a/TvEngine3/Mediaportal/TV/Server/Plugins/TunerExtensions/DirecTvShef/DirecTvShef.csproj
+++ b/TvEngine3/Mediaportal/TV/Server/Plugins/TunerExtensions/DirecTvShef/DirecTvShef.csproj
@@ -135,6 +135,7 @@
   <ItemGroup>
     <EmbeddedResource Include="Config\DirecTvShefConfig.resx">
       <DependentUpon>DirecTvShefConfig.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Config\SelectGenieMini.resx">
       <DependentUpon>SelectGenieMini.cs</DependentUpon>
