MP1-4155: moved connection timeouts from specific protocol settings to base settings added crash report parameters to TV plugin

--- a/TvEngine3/TVLibrary/Plugins/MediaPortalIptvFilterAndUrlSourceSplitter/MediaPortalIptvFilterAndUrlSourceSplitter.csproj
+++ b/TvEngine3/TVLibrary/Plugins/MediaPortalIptvFilterAndUrlSourceSplitter/MediaPortalIptvFilterAndUrlSourceSplitter.csproj
@@ -96,6 +96,7 @@
     <Compile Include="FinishedWorkEventArgs.cs" />
     <Compile Include="HttpProtocolSettings.cs" />
     <Compile Include="Url\CacheFolderEditor.cs" />
+    <Compile Include="Url\CrashReportMode.cs" />
     <Compile Include="Url\FilterProgramNumber.cs" />
     <Compile Include="Url\FilterProgramNumberCollection.cs" />
     <Compile Include="Url\FilterProgramNumberControl.cs">
