Move the Pronto class from the Microsoft Blaster tuner extension to TV library interfaces so that it can be reused by the USB-UIRT tuner extension. Also rename the Microsoft Blaster tuner extension SetTopBoxConfig class to TunerSetTopBoxConfig and update associated comments and variables. This clarifies the purpose/usage of the class.
No functional changes.

--- a/TvEngine3/Mediaportal/TV/Server/Plugins/TunerExtensions/MicrosoftBlaster/MicrosoftBlaster.csproj
+++ b/TvEngine3/Mediaportal/TV/Server/Plugins/TunerExtensions/MicrosoftBlaster/MicrosoftBlaster.csproj
@@ -97,12 +97,11 @@
     <Compile Include="DriverEmulator.cs" />
     <Compile Include="Enum\LearnResult.cs" />
     <Compile Include="MicrosoftBlaster.cs" />
-    <Compile Include="Pronto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Decoder\DetectionData.cs" />
     <Compile Include="Service\MicrosoftBlasterConfigService.cs" />
     <Compile Include="Service\IMicrosoftBlasterConfigService.cs" />
-    <Compile Include="SetTopBoxConfig.cs" />
+    <Compile Include="TunerSetTopBoxConfig.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\..\..\..\Common-MP-TVE3\Common.Utils\Common.Utils.csproj">
