Minor changes for the Microsoft Blaster tuner extension: 1. Ensure the learn dialog used for config is disposed. 2. The learn dialog directly handles learning and saving of profiles. It won't be directly reused for the USB-UIRT tuner extension, so there's no need for the code to be generic. 3. Move the driver classes into their own folder and namespace.

--- a/TvEngine3/Mediaportal/TV/Server/Plugins/TunerExtensions/MicrosoftBlaster/MicrosoftBlaster.csproj
+++ b/TvEngine3/Mediaportal/TV/Server/Plugins/TunerExtensions/MicrosoftBlaster/MicrosoftBlaster.csproj
@@ -92,9 +92,9 @@
     <Compile Include="Decoder\DecoderJvc.cs" />
     <Compile Include="Decoder\DecoderBase.cs" />
     <Compile Include="Decoder\DecoderDaewoo.cs" />
-    <Compile Include="Driver.cs" />
-    <Compile Include="DriverPort.cs" />
-    <Compile Include="DriverEmulator.cs" />
+    <Compile Include="Driver\Driver.cs" />
+    <Compile Include="Driver\DriverPort.cs" />
+    <Compile Include="Driver\DriverEmulator.cs" />
     <Compile Include="Enum\LearnResult.cs" />
     <Compile Include="MicrosoftBlaster.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
