--- a/mediaportal/Core/packages.config
+++ b/mediaportal/Core/packages.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BASS" version="2.4.10" targetFramework="net40" />
   <package id="bass.aac" version="2.4.4.4" targetFramework="net40" />
