Random project change. VS seems to have done this by itself.

--- a/TvEngine3/Mediaportal/TV/Server/Plugins/WebEPG/WebEPGPlugin/WebEPGImport.csproj
+++ b/TvEngine3/Mediaportal/TV/Server/Plugins/WebEPG/WebEPGPlugin/WebEPGImport.csproj
@@ -167,6 +167,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Config\WebEPGMappingControl.resx">
       <DependentUpon>WebEPGMappingControl.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
