Centralise recording file name logic in the Program (ProgramPartial.cs) entity. This avoids code duplication in TV Server Configuration and the TV service scheduler.

--- a/TvEngine3/Mediaportal/TV/Server/TVDatabase/Entities/Entities.csproj
+++ b/TvEngine3/Mediaportal/TV/Server/TVDatabase/Entities/Entities.csproj
@@ -109,6 +109,7 @@
       <SubType>
       </SubType>
     </Compile>
+    <Compile Include="ProgramPartial.cs" />
     <Compile Include="VideoEncoderPartial.cs" />
     <Compile Include="TuningDetailPartial.cs" />
     <Compile Include="SatellitePartial.cs" />
