--- a/TvEngine3/Mediaportal/TV/Server/SetupTv/SetupTv.csproj
+++ b/TvEngine3/Mediaportal/TV/Server/SetupTv/SetupTv.csproj
@@ -156,12 +156,6 @@
     <Compile Include="Dialogs\FormPreview.designer.cs">
       <DependentUpon>FormPreview.cs</DependentUpon>
     </Compile>
-    <Compile Include="Dialogs\FormSelectListChannel.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Dialogs\FormSelectListChannel.Designer.cs">
-      <DependentUpon>FormSelectListChannel.cs</DependentUpon>
-    </Compile>
     <Compile Include="Dialogs\FormEnterText.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -177,6 +171,12 @@
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="HelpSystem.cs" />
     <Compile Include="InputBox.cs" />
+    <Compile Include="Sections\Scanning.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Sections\Scanning.Designer.cs">
+      <DependentUpon>Scanning.cs</DependentUpon>
+    </Compile>
     <Compile Include="Sections\Helpers\ChannelScanHelper.cs" />
     <Compile Include="Sections\Helpers\Codec.cs" />
     <Compile Include="Sections\Helpers\Enum\ScanType.cs" />
@@ -237,12 +237,6 @@
     <Compile Include="SettingsForm.Designer.cs">
       <DependentUpon>SettingsForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="NotifyForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="NotifyForm.Designer.cs">
-      <DependentUpon>NotifyForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="PluginLoaderSetupTv.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Dialogs\FormEditTuningDetailCommon.resx">
@@ -293,6 +287,10 @@
     <EmbeddedResource Include="Sections\CardDvbT.resx">
       <SubType>Designer</SubType>
       <DependentUpon>CardDvbT.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Sections\Scanning.resx">
+      <DependentUpon>Scanning.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Sections\UserPriorities.resx">
       <DependentUpon>UserPriorities.cs</DependentUpon>
@@ -492,20 +490,12 @@
       <DependentUpon>FormPreview.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="Dialogs\FormSelectListChannel.resx">
-      <SubType>Designer</SubType>
-      <DependentUpon>FormSelectListChannel.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\FormEnterText.resx">
       <DependentUpon>FormEnterText.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\FormSelectItems.resx">
       <DependentUpon>FormSelectItems.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="NotifyForm.resx">
-      <DependentUpon>NotifyForm.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Sections\CardDvbIP.resx">
