Provide full instructions for modifying the database structure.

--- a/TvEngine3/Mediaportal/TV/Server/TVDatabase/EntityModel/EntityModel.csproj
+++ b/TvEngine3/Mediaportal/TV/Server/TVDatabase/EntityModel/EntityModel.csproj
@@ -113,7 +113,7 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="how 2 auto generate poco classes.txt" />
+    <Content Include="how to modify the database structure.txt" />
     <Content Include="Model.edmx.sql" />
     <Content Include="Model_SQLite.edmx.sql" />
   </ItemGroup>
