Database structure modifications: 1. Add the TunerSatellite table, with associations to Satellite, Tuner and LnbType tables. 2. Add the IdSatellite column to the TuningDetail table. This is a new foreign key to the Satellite table. The intention is that this will eventually replace the DiSEqC, SatIndex and IdLnbType columns in the TuningDetail table and [finally!] make satellite tuning details tuner-independent. 3. Add the LastEpgGrabTime and GrabEpg columns to the TuningDetail table. These are for yet-to-be-written tuner EPG grabber logic.

--- a/TvEngine3/Mediaportal/TV/Server/TVDatabase/Entities/Entities.csproj
+++ b/TvEngine3/Mediaportal/TV/Server/TVDatabase/Entities/Entities.csproj
@@ -249,6 +249,11 @@
       <SubType>
       </SubType>
     </Compile>
+    <Compile Include="TunerSatellite.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+      <SubType>
+      </SubType>
+    </Compile>
     <Compile Include="TuningDetail.cs">
       <DependentUpon>Model.tt</DependentUpon>
       <SubType>
