Mainly: 1. Integrate DB structure changes (TunerSatellite etc.) for satellite tuning/scanning. 2. Fix quality control support, which was broken for a very *very* long time. 3. Patch up EPG grabber code enough to make it compile. It's still hopelessly broken though.

--- a/TvEngine3/Mediaportal/TV/Server/TVLibrary/TVLibrary.csproj
+++ b/TvEngine3/Mediaportal/TV/Server/TVLibrary/TVLibrary.csproj
@@ -276,6 +276,8 @@
     <Compile Include="Interfaces\Analyzer\ICallBackGrabber.cs" />
     <Compile Include="Interfaces\Analyzer\IGrabberEpgAtsc.cs" />
     <Compile Include="Interfaces\Analyzer\IGrabberEpgOpenTv.cs" />
+    <Compile Include="Interfaces\IQualityControlInternal.cs" />
+    <Compile Include="Interfaces\IEpgGrabberInternal.cs" />
     <Compile Include="Interfaces\ISubChannelManager.cs" />
     <Compile Include="Interfaces\ISubChannelInternal.cs" />
     <Compile Include="Interfaces\ITunerDetectorSystem.cs" />
