--- a/TvEngine3/Mediaportal/TV/Server/Common.Types/Common.Types.csproj
+++ b/TvEngine3/Mediaportal/TV/Server/Common.Types/Common.Types.csproj
@@ -68,6 +68,8 @@
     <Compile Include="Enum\CamType.cs" />
     <Compile Include="Enum\ContentAdvisory.cs" />
     <Compile Include="Enum\ChannelGroupType.cs" />
+    <Compile Include="Enum\EncodeMode.cs" />
+    <Compile Include="Enum\QualityType.cs" />
     <Compile Include="Enum\RecordingThumbnailQuality.cs" />
     <Compile Include="Enum\FrameSize.cs" />
     <Compile Include="Enum\FrameRate.cs" />
