--- a/TvEngine3/Mediaportal/TV/Server/SetupTv/SetupTv.csproj
+++ b/TvEngine3/Mediaportal/TV/Server/SetupTv/SetupTv.csproj
@@ -60,6 +60,12 @@
     <Compile Include="..\..\..\..\..\Common-MP-TVE3\SolutionInfo.cs">
       <Link>SolutionInfo.cs</Link>
     </Compile>
+    <Compile Include="Dialogs\FormEditTunerSatellite.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Dialogs\FormEditTunerSatellite.Designer.cs">
+      <DependentUpon>FormEditTunerSatellite.cs</DependentUpon>
+    </Compile>
     <Compile Include="Dialogs\FormEditTuningDetailCommon.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -171,6 +177,12 @@
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="HelpSystem.cs" />
     <Compile Include="InputBox.cs" />
+    <Compile Include="Sections\Satellites.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Sections\Satellites.Designer.cs">
+      <DependentUpon>Satellites.cs</DependentUpon>
+    </Compile>
     <Compile Include="Sections\Scanning.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -239,6 +251,10 @@
     </Compile>
     <Compile Include="PluginLoaderSetupTv.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Dialogs\FormEditTunerSatellite.resx">
+      <DependentUpon>FormEditTunerSatellite.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\FormEditTuningDetailCommon.resx">
       <DependentUpon>FormEditTuningDetailCommon.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -287,6 +303,10 @@
     <EmbeddedResource Include="Sections\CardDvbT.resx">
       <SubType>Designer</SubType>
       <DependentUpon>CardDvbT.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Sections\Satellites.resx">
+      <DependentUpon>Satellites.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Sections\Scanning.resx">
       <DependentUpon>Scanning.cs</DependentUpon>
