Tentative improvements towards ATI CableCARD tuner support. These changes are based on scraps of information in the log file from here: http://forum.team-mediaportal.com/threads/signal-blocked-no-channels-found.134721/

--- a/TvEngine3/Mediaportal/TV/Server/TVLibrary/TVLibrary.csproj
+++ b/TvEngine3/Mediaportal/TV/Server/TVLibrary/TVLibrary.csproj
@@ -124,6 +124,8 @@
     <Compile Include="Implementations\Atsc\EpgGrabberAtsc.cs" />
     <Compile Include="Implementations\DirectShow\Bda\TunerDetectorBda.cs" />
     <Compile Include="Implementations\DirectShow\TunerDirectShowMpeg2TsBase.cs" />
+    <Compile Include="Implementations\Dri\ChannelScannerDriCeton.cs" />
+    <Compile Include="Implementations\Dri\ChannelScannerDriSiliconDust.cs" />
     <Compile Include="Implementations\Dri\SubChannelManagerDri.cs" />
     <Compile Include="Implementations\Dvb\ChannelScannerDvb.cs" />
     <Compile Include="Implementations\Dvb\Enum\RollOffFactor.cs" />
