DRI: 1. Implement PID filtering support for tuning by physical channel/frequency (tuner service SetTunerParameters() action). I saw indications that this is necessary while attempting to add support for ATI CableCARD tuners. Further, given how locked down CableCARD tuners are, it makes sense that they wouldn't just dump the whole TS onto the network. 2. Improve diag parameter support. We now attempt to use QueryStateVariable() (ugh, yes - UPnP 1.0) to get the full parameter list. If that fails, we fall back on list details gleaned from development work (mainly Wireshark dumps). 3. Fall back to the AVTransport Stop() action when the tuner doesn't support Pause(). Given that we're always dealing with live streams, Pause() generally doesn't make sense anyway.

--- a/TvEngine3/Mediaportal/TV/Server/TVLibrary/TVLibrary.csproj
+++ b/TvEngine3/Mediaportal/TV/Server/TVLibrary/TVLibrary.csproj
@@ -126,6 +126,7 @@
     <Compile Include="Implementations\DirectShow\TunerDirectShowMpeg2TsBase.cs" />
     <Compile Include="Implementations\Dri\ChannelScannerDriCeton.cs" />
     <Compile Include="Implementations\Dri\ChannelScannerDriSiliconDust.cs" />
+    <Compile Include="Implementations\Dri\Enum\TunerVendor.cs" />
     <Compile Include="Implementations\Dri\SubChannelManagerDri.cs" />
     <Compile Include="Implementations\Dvb\ChannelScannerDvb.cs" />
     <Compile Include="Implementations\Dvb\Enum\RollOffFactor.cs" />
@@ -195,8 +196,7 @@
     <Compile Include="Implementations\Dri\Enum\EncoderInputSelection.cs" />
     <Compile Include="Implementations\Dri\Enum\EncoderVideoProgressiveSequence.cs" />
     <Compile Include="Implementations\Dri\Enum\EncoderFieldOrder.cs" />
-    <Compile Include="Implementations\Dri\Enum\DiagParameterCeton.cs" />
-    <Compile Include="Implementations\Dri\Enum\DiagParameterDri.cs" />
+    <Compile Include="Implementations\Dri\Enum\DiagParameter.cs" />
     <Compile Include="Implementations\Dri\Enum\EncoderAudioAlgorithm.cs" />
     <Compile Include="Implementations\Dri\Enum\EncoderMode.cs" />
     <Compile Include="Implementations\Dri\Enum\EncoderVideoAspectRatio.cs" />
